--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
+      - run: gem update --system
       - run: bundle exec rspec spec/
       - uses: coverallsapp/github-action@1.1.3
         with:
