--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
-      - run: gem update --system
+      - run: gem update --system 3.2.3
       - run: bundle exec rspec spec/
       - uses: coverallsapp/github-action@1.1.3
         with:
