--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -19,6 +19,8 @@ jobs:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
       - run: gem update --system 3.2.3
+      - run: mkdir -p certificates/
+      - run: echo "${{ secrets.PASSPHRASE }}" | gpg --batch --yes --passphrase-fd 0 -d doconomy.pem.gpg > certificates/doconomy.pem
       - run: bundle exec rspec spec/
       - uses: coverallsapp/github-action@1.1.3
         with:
